Fixed responsive overflow issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,8 +4,8 @@
 }
 
 @font-face {
-  font-family: Miama;
-  src: url(/styles/fonts/Miama.ttf);
+  font-family: 'Miama';
+  src: url('/styles/fonts/Miama.ttf');
 }
 
 .inter {
@@ -85,7 +85,7 @@
 }
 
 .ban-text h1 span {
-  font-family: Miama;
+  font-family: 'Miama';
   font-weight: 400;
   font-size: 140px;
   background-color: rgba(48, 48, 48, 0);
@@ -146,6 +146,7 @@ button {
   justify-content: center;
   border-radius: 15px;
   background-color: transparent;
+  align-items: center;
 }
 
 .dot {
@@ -344,6 +345,7 @@ h2 {
   padding: 3rem 3rem;
   width: 69%;
   margin: 1rem auto;
+  align-items: center;
 }
 
 .calcnchar h3 {
@@ -380,13 +382,20 @@ td, .calc p {
   margin-bottom: 1rem;
 }
 
+.calc {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  gap: 0.5rem;
+  max-width: 576px;
+  margin: 1rem auto;
+  box-sizing: border-box;
+}
+
 .calc-inp {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto, auto;
-  gap: 0.5rem;
-  grid-auto-flow: row;
-  margin: 1rem 0;
+  gap: 1rem .5rem;
 }
 
 input, select {
@@ -400,7 +409,12 @@ input, select {
 }
 
 .act-fact {
-  grid-column: span 2;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.calc button {
+  width: 50%;
 }
 
 
@@ -420,6 +434,10 @@ input, select {
   width: 69%;
   margin: 3rem auto 0rem auto;
   text-align: center;
+}
+
+.team-txt p {
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .row-1 {
@@ -568,6 +586,7 @@ hr {
 @media screen and (max-width: 576px) {
   .nav-cont {
     width: 90%;
+    overflow: hidden;
   }
   .nav-elements {
     display: none;
@@ -582,8 +601,12 @@ hr {
     align-items: center;
     width: 90%;
     margin: 1rem auto;
-    gap: 5rem;
-    background-color: transparent;
+    overflow: hidden;
+    padding: 1rem;
+  }
+
+  .ban-pic img {
+    width: 69%;
   }
 
   .ban-text h1 {
@@ -597,6 +620,26 @@ hr {
   .ban-text p {
     font-size: 16px;
   }
+
+  .vidt-text h4 {
+    font-size: 20px;
+  }
+
+  .vidt-text p {
+    font-size: 14px;
+  }
+
+  .workv h4 {
+    font-size: 30px;
+  }
+
+  .workv p {
+    font: 10px;
+  }
+
+  
+
+
   button {
     color: white;
     cursor: pointer;
@@ -609,6 +652,7 @@ hr {
   }
   .habits {
     width: 90%;
+    overflow: hidden;
   }
   .habit-cont {
     display: flex;
@@ -630,41 +674,63 @@ hr {
     padding: 1rem 1rem;
   }
   h2 {
-    font-size: 36px;
+    font-size: 32px;
   }
 
   .cc-bg {
-    
-  }
-  .calc {
-    margin: 3rem 2.5rem 1rem 0;
+    overflow: hidden;
   }
 
   .calcnchar {
     display: flex;
     flex-direction: column;
-    padding: 3rem 3rem;
     width: 90%;
     margin: 1rem auto;
+    overflow: hidden;
   }
 
-  .calc-inp {
+  .calcnchar h3 {
+    font-size: 16px;
+  }
+
+  .chart {
+    margin: .5rem auto;
+    padding: 0 3rem 0 0;
+  }
+
+  .calc {
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    grid-auto-flow: row;
+    max-width: 400px;
+    margin: 3rem 3rem 0 auto;
+    box-sizing: border-box;
+    overflow: hidden;
+    justify-content: flex-start;
+  }
+  
+  .calc-inp {
+    grid-template-columns: 1fr;
+    gap: .5rem;
   }
 
   input, select {
-    padding: 1rem;
-    font-size: 16px;
-    font-family: Inter;
-    background-color: rgb(255, 255, 255, 10%);
-    color: rgba(255, 255, 255, 0.6);
-    border-radius: 8px;
-    border: 0px solid transparent;
+    padding: 10px;
   }
   
+  .act-fact {
+    width: 100%;
+    box-sizing: border-box;
+  }
+  
+  .calc button {
+    width: 100%;
+  }
+  
+  .tra-card {
+    overflow: hidden;
+  }
 
   .row-1 {
     display: flex;
@@ -684,6 +750,10 @@ hr {
     align-items: center;
     background-color: transparent;
   }
+
+  .footer-cont {
+    overflow: hidden;
+  }
   .footer-cont h1 {
     font-size: 36px;
     margin-bottom: 10px;
@@ -697,6 +767,7 @@ hr {
     margin: 1rem auto;
     padding: 5rem 1rem;
     gap: 3rem;
+    overflow: hidden;
   }
   .foots h4 {
     text-align: left;
